# Quant

./: .gitignore  README.md  quant_ARCHITECTURE.md  requirements.txt  구조.txt
backtest/: 01_currency_check.py  02_gold_cross_2050.py  03_sma_comparison.py  05_strategy_backtest.py
backtest/config/: __init__.py  api_config.py
backtest/data/: bitcoin_daily_365.csv  bitcoin_daily_5years.csv
coin_auto_trading/: .gitignore  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SUMMARY.md  VERIFY.md  cli.py  requirements.txt  verify.sh
coin_auto_trading/quantbot/: .gitignore  CHECKLIST.md  README.md  pyproject.toml  requirements.txt
coin_auto_trading/quantbot/app/: __init__.py  __main__.py
coin_auto_trading/quantbot/app/api/: __init__.py  main.py
coin_auto_trading/quantbot/app/core/: __init__.py
coin_auto_trading/quantbot/app/execution/: __init__.py
coin_auto_trading/quantbot/app/features/: __init__.py
coin_auto_trading/quantbot/app/strategies/: __init__.py
quant_trading_system/: AI_ML_INTEGRATION.md  ARCHITECTURE.md  COMPONENTS.md  DIRECTORY_STRUCTURE.md  README.md
realtime_trading/: README.md  __init__.py  config.py  config_macd.py  goldcross_strategy.py  logger.py  macd_strategy.py  paper_trading_engine.py  realtime_data.py  run_macd_realtime.py  run_realtime.py
upbit_balance_checker/: CLEAN_STRUCTURE.md  COIN_CONFIG_GUIDE.md  NEW_STRUCTURE.md  README.md  check_balance.py  global_config.py  realtime_monitor.py  realtime_price_monitor.py  requirements.txt  run_backtest.py  run_sma20_50.py  run_sma5_20.py  run_sma_minute.py  run_strategy.py  run_strategy.sh
(+128 files in other folders)
